--- a/Web/post/templates/post/categories_confirm_delete.html
+++ b/Web/post/templates/post/categories_confirm_delete.html
@@ -1,25 +1,33 @@
 {% extends 'core/base.html' %}
 {% load static %}
 {% block title %}Anime | Eliminar{% endblock %}
+{% block button %}
+  <button class="btn btn-primary " id="menu-toggle">Toggle Menu</button>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
+{% endblock %}
 {% block categories %}
-        <div class="sidebar-heading">Categorias </div>
-          <div class="list-group list-group-flush">
-          {% for category in objects %}
-          <div class="dropdown">
-            <a href="#" class="list-group-item list-group-item-action bg-light " 
+<div class="bg-light border-right" id="sidebar-wrapper">
+<div class="sidebar-heading">Categorias </div>
+<div class="list-group list-group-flush">
+{% for category in objects %}
+  <div class="dropdown">
+    <a href="#" class="list-group-item list-group-item-action bg-light "
             {% if user.is_staff %}data-toggle="dropdown">{% endif %}
-              {{category}} {% if user.is_staff %}<i class="fa fa-caret-down"></i>{% endif %}
-            </a>
-            {% if user.is_staff %}
-            <div class="dropdown-menu" aria-labelledby="dropdown">
-            <a class="dropdown-item" href="">Buscar por categoria</a>
-              <a class="dropdown-item" href="{% url 'post:update' category.id %}">Editar</a>
-              <a class="dropdown-item" href="{% url 'post:delete' category.id %}">Borrar</a>
-            </div>
-            {% endif %}
-          </div>
-          {% endfor %}
-          </div>
+      {{category}} {% if user.is_staff %}<i class="fa fa-caret-down"></i>{% endif %}
+    </a>
+    {% if user.is_staff %}
+    <div class="dropdown-menu" aria-labelledby="dropdown">
+      <a class="dropdown-item" href="{% url 'post:search' category%}">Buscar por categoria</a>
+      <a class="dropdown-item" href="{% url 'post:update' category.id %}">Editar</a>
+      <a class="dropdown-item" href="{% url 'post:delete' category.id %}">Borrar</a>
+    </div>
+    {% endif %}
+  </div>
+  {% endfor %}
+</div>
+</div>
 {% endblock %}
 {% block content %}
 <style>.errorlist{color:red;}</style>
