--- a/Web/core/templates/core/base.html
+++ b/Web/core/templates/core/base.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% block title %}{% endblock %}</title>
     {% load static %}
+    {% block style %}
+    {% endblock %}
     <link href= "{% static 'core/vendor/bootstrap/css/bootstrap.min.css' %}"  rel="stylesheet">
     <link href= "{% static 'core/css/simple-sidebar.css' %}"  rel="stylesheet">
     <link rel="icon" type="image/x-icon" href= "{% static 'core/assets/img/favicon.ico' %}" />
@@ -12,54 +14,62 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
     <link href= "{% static 'core/css/styles.css' %}" rel="stylesheet" />
+    <link href= "{% static 'core/css/dh-card-image-left-dark.css' %}"  rel="stylesheet">
   </head>
   <body>
-    <body>
     <div class="d-flex" id="wrapper">
-      <div class="bg-light border-right" id="sidebar-wrapper">
-{% block categories %}{% endblock %}
-        </div>
+      {% block categories %}{% endblock %}
       <div id="page-content-wrapper">
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-          <button class="btn btn-primary " id="menu-toggle">Toggle Menu</button>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          
+        {% block button %}{% endblock %}
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
               <li class="nav-item active">
-                <a class="nav-link" href="{% url 'post:view' %}">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'cap:ListCap' %}">Inicio <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="{% url 'post:view' %}">Directorio Anime <span class="sr-only">(current)</span></a>
               </li>
               {% if user.is_staff %}
               <li class="nav-item dropdown">
                 <div class="dropdown">
-            <a class="nav-link dropdown-toggle " data-toggle="dropdown">
-              Admin
-            </a>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="{% url 'post:add' %}">Añadir Categoria</a>
-              <a class="dropdown-item" href="{% url 'post:create-post' %}">Añadir Post</a>
-            </div>
-          </div>
+                  <a class="nav-link dropdown-toggle " data-toggle="dropdown">
+                  Admin
+                  </a>
+                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="{% url 'post:add' %}">Añadir Categoria</a>
+                    <a class="dropdown-item" href="{% url 'post:create-post' %}">Añadir Post</a>
+                  </div>
+                </div>
               </li>
               {% endif %}
+              {% if not request.user.is_authenticated %}
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown
+                  Ingresar
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="{% url 'login' %}">Acceder</a>
+                  <a class="dropdown-item" href="{% url 'signup' %}">Registro</a>
+                </div> 
+                {% else %}
+                  <a class="nav-link" href="{% url 'logout' %}">Salir <span class="sr-only">(current)</span></a>
+                {% endif %}
               </li>
-              
             </ul>
           </div>
         </nav>
+
       <!-- Contenido -->
       {% block content %}{% endblock %}
 
     <script src="{% static 'core/vendor/jquery/jquery.min.js' %}" ></script>
     <script src= "{% static 'core/vendor/bootstrap/js/bootstrap.bundle.min.js' %}" ></script>
+      <script>
+    $("#menu-toggle").click(function(e) {
+      e.preventDefault();
+      $("#wrapper").toggleClass("toggled");
+    });
+  </script>
   </body>
 </html>
