--- a/Web/post/templates/post/create_post.html
+++ b/Web/post/templates/post/create_post.html
@@ -1,8 +1,8 @@
 {% extends 'core/base.html' %}
 {% load static %}
-{% block title %}Anime | Añadir post{% endblock %}     
+{% block title %}Anime | Añadir post{% endblock %}
 {% block content %}
-<style>.errorlist{color:red;} label{display:none}</style>
+<style>.errorlist{color:red;} li{list-style:none;}</style>
 <main role="main">
   <div class="container">
     <div class="row mt-3">
@@ -10,8 +10,24 @@
       {% if user.is_staff %}
         <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
           <h3 class="mb-4">Crear un nuevo Post</h3>
-            {{form.as_p}}
-          <p><input type="submit" class="btn btn-primary btn-block" value="Añadir"></p>
+            <div class="col-md-10">
+              <p>{{ form.title }}</p>
+              <p>{{ form.img }}</p>
+              <div class="container mt-4 mb-4">
+                <ul class="list-group list-group-horizontal-xl">
+                <div class="row">
+                {% for a in form.category %} 
+                  <div class="col-4">
+                  <li class="list-group">{{a}}</li>
+                  </div>
+                {% endfor %}
+                  </div>
+                  </ul>  
+              </div>
+              {{ form.content }}
+              <input type="submit" class="btn btn-primary btn-block mt-3" value="Actualizar">
+            </div>
+
         </form>
         {% endif %}
       </div>
