--- a/Web/post/templates/post/update_post.html
+++ b/Web/post/templates/post/update_post.html
@@ -2,19 +2,40 @@
 {% load static %}
 {% block title %}Anime | Modificar{% endblock %}
 {% block content %}
-<style>.errorlist{color:red;} label{display:none}</style>
+<style>.errorlist{color:red;} li{list-style:none;}</style>
 <main role="main">
   <div class="container">
     <div class="row mt-3">
       <div class="col-md-9 mx-auto mb-5">
         <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
-          <h3 class="mb-4">Modificar {{object.title}}</h3>
-            {{form}}
-          <p><input type="submit" class="btn btn-primary btn-block" value="Añadir"></p>
+        <div class="row">
+            <!-- Previa del avatar -->
+            <div class="col-md-2">
+                <img src="{{object.img.url}}" alt="" class="img-fluid">
+            </div>
+            <!-- Formulario -->
+            <div class="col-md-10">
+              <h3>{{object.title}}</h3>
+              <p>{{ form.title }}</p>
+              <p>{{ form.img }}</p>
+              <div class="container mt-4 mb-4">
+                <ul class="list-group list-group-horizontal-xl">
+                <div class="row">
+                {% for a in form.category %} 
+                  <div class="col-4">
+                  <li class="list-group">{{a}}</li>
+                  </div>
+                {% endfor %}
+                  </div>
+                  </ul>  
+              </div>
+              {{ form.content }}
+              <input type="submit" class="btn btn-primary btn-block mt-3" value="Enviar">
+            </div>
+          </div>
         </form>
       </div>
     </div>
   </div>
 </main>
-
 {% endblock %}
